--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@vitejs/plugin-react": "^4.0.0",
     "ts-jest": "^29.0.3",
     "vite": "^4.3.4",
+    "vite-plugin-fonts": "^0.7.0",
     "vite-plugin-svgr": "^3.2.0",
     "vite-tsconfig-paths": "^4.2.0"
   }
